apps/websub-listener/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: websub-listener-service
spec:
  selector:
    app: websub-listener
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
